--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "css-loader": "^6.7.3",
     "emailjs": "^4.0.1",
     "express": "^4.18.1",
     "nodemailer": "^6.7.5",
@@ -59,5 +61,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "tailwindcss": "^3.2.7"
   }
 }
